# lianghua

./: README.md  pyproject.toml
configs/: binance_doge.yaml  binance_doge_dl.yaml  finnhub.yaml  sample.yaml  tushare.yaml
scripts/: augment_reference_features.py  build_features.py  train_lstm.py
src/lianghua/: __init__.py  config.py  main.py
src/lianghua.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/lianghua/data/: feed.py
src/lianghua/engine/: backtester.py  observer.py
src/lianghua/features/: __init__.py  engineer.py
src/lianghua/pipelines/: simulation.py
src/lianghua/portfolio/: account.py
src/lianghua/strategy/: base.py  deep_learning.py  moving_average.py  trend_break.py
src/lianghua/ui/: __init__.py  forms.py
src/lianghua/visualization/: __init__.py  equity.py  live.py
